tests/basic/check/eq/030.pan.out
tests/basic/check/eq/030.pan:4:1-4: error: cannot solve constraints of f30
tests/basic/check/eq/030.pan:7:1-4: error: cannot solve constraints of f31