tests/basic/check/eq/030.pan
eq : (a:â„¤) â†’ (b:â„¤) â†’ { c:ğ”¹ | c = true âŸº a = b }

f30 : {v:bool|false}
f30 = eq 1 1

f31 : {v:bool|false}
f31 = eq 1 2

